tweaked RNN arch a little, improved performance slightly

--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -829,7 +829,7 @@
     "    # TODO: Implement\n",
     "    learning_rate=0.001\n",
     "    model = Sequential()\n",
-    "    model.add(Embedding(english_vocab_size,128,input_length=input_shape[1]))\n",
+    "    model.add(Embedding(english_vocab_size,256,input_length=input_shape[1]))\n",
     "    model.add(Bidirectional(GRU(512,return_sequences=False)))\n",
     "    model.add(RepeatVector(output_sequence_length))\n",
     "    model.add(Bidirectional(GRU(512,return_sequences=True)))\n",
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -870,30 +870,30 @@
      "text": [
       "Train on 110288 samples, validate on 27573 samples\n",
       "Epoch 1/10\n",
-      "90s - loss: 2.5422 - acc: 0.4746 - val_loss: nan - val_acc: 0.5531\n",
+      "92s - loss: 2.3341 - acc: 0.4938 - val_loss: nan - val_acc: 0.5882\n",
       "Epoch 2/10\n",
-      "89s - loss: 1.4938 - acc: 0.6044 - val_loss: nan - val_acc: 0.6483\n",
+      "91s - loss: 1.3707 - acc: 0.6371 - val_loss: nan - val_acc: 0.6726\n",
       "Epoch 3/10\n",
-      "89s - loss: 1.1456 - acc: 0.6802 - val_loss: nan - val_acc: 0.7094\n",
+      "91s - loss: 1.0388 - acc: 0.7106 - val_loss: nan - val_acc: 0.7344\n",
       "Epoch 4/10\n",
-      "89s - loss: 0.9205 - acc: 0.7337 - val_loss: nan - val_acc: 0.7523\n",
+      "91s - loss: 0.8197 - acc: 0.7592 - val_loss: nan - val_acc: 0.7764\n",
       "Epoch 5/10\n",
-      "89s - loss: 0.7705 - acc: 0.7709 - val_loss: nan - val_acc: 0.7908\n",
+      "91s - loss: 0.6613 - acc: 0.8026 - val_loss: nan - val_acc: 0.8198\n",
       "Epoch 6/10\n",
-      "89s - loss: 0.6488 - acc: 0.8041 - val_loss: nan - val_acc: 0.8269\n",
+      "91s - loss: 0.5362 - acc: 0.8389 - val_loss: nan - val_acc: 0.8549\n",
       "Epoch 7/10\n",
-      "89s - loss: 0.5198 - acc: 0.8424 - val_loss: nan - val_acc: 0.8622\n",
+      "91s - loss: 0.4326 - acc: 0.8707 - val_loss: nan - val_acc: 0.8822\n",
       "Epoch 8/10\n",
-      "89s - loss: 0.4091 - acc: 0.8766 - val_loss: nan - val_acc: 0.8931\n",
+      "91s - loss: 0.3400 - acc: 0.8983 - val_loss: nan - val_acc: 0.9058\n",
       "Epoch 9/10\n",
-      "89s - loss: 0.3185 - acc: 0.9050 - val_loss: nan - val_acc: 0.9198\n",
+      "91s - loss: 0.2646 - acc: 0.9221 - val_loss: nan - val_acc: 0.9287\n",
       "Epoch 10/10\n",
-      "89s - loss: 0.2514 - acc: 0.9250 - val_loss: nan - val_acc: 0.9267\n",
+      "91s - loss: 0.2143 - acc: 0.9362 - val_loss: nan - val_acc: 0.9426\n",
       "Sample 1:\n",
       "il a vu un vieux camion jaune <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n",
       "Il a vu un vieux camion jaune\n",
       "Sample 2:\n",
-      "new jersey est parfois calme au l' automne et il est il en avril <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n",
+      "new jersey est parfois calme au cours et il est neigeux en avril <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n",
       "<PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
      ]
     }
@@ -939,6 +939,27 @@
     "\n",
     "\n",
     "final_predictions(preproc_english_sentences, preproc_french_sentences, english_tokenizer, french_tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['new jersey is sometimes quiet during autumn , and it is snowy in april .', 'the united states is usually chilly during july , and it is usually freezing in november .']\n",
+      "[\"new jersey est parfois calme pendant l' automne , et il est neigeux en avril .\", 'les états-unis est généralement froid en juillet , et il gèle habituellement en novembre .']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(english_sentences[:2])\n",
+    "print(french_sentences[:2])"
    ]
   },
   {
