--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -287,7 +287,7 @@
     "    :return: Padded numpy array of sequences\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return pad_sequences(x, maxlen=length, dtype='int32',padding='post', value=0.)\n",
+    "    return pad_sequences(x, maxlen=length, padding='post')\n",
     "\n",
     "tests.test_pad(pad)\n",
     "\n",
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -432,26 +432,26 @@
      "text": [
       "Train on 110288 samples, validate on 27573 samples\n",
       "Epoch 1/10\n",
-      "21s - loss: 2.2336 - acc: 0.5172 - val_loss: nan - val_acc: 0.5931\n",
+      "24s - loss: 2.2159 - acc: 0.5221 - val_loss: nan - val_acc: 0.5953\n",
       "Epoch 2/10\n",
-      "20s - loss: 1.4350 - acc: 0.6117 - val_loss: nan - val_acc: 0.6282\n",
+      "21s - loss: 1.4271 - acc: 0.6106 - val_loss: nan - val_acc: 0.6269\n",
       "Epoch 3/10\n",
-      "20s - loss: 1.2564 - acc: 0.6380 - val_loss: nan - val_acc: 0.6460\n",
+      "21s - loss: 1.2558 - acc: 0.6369 - val_loss: nan - val_acc: 0.6458\n",
       "Epoch 4/10\n",
-      "20s - loss: 1.1494 - acc: 0.6571 - val_loss: nan - val_acc: 0.6669\n",
+      "21s - loss: 1.1473 - acc: 0.6572 - val_loss: nan - val_acc: 0.6617\n",
       "Epoch 5/10\n",
-      "20s - loss: 1.0747 - acc: 0.6704 - val_loss: nan - val_acc: 0.6700\n",
+      "21s - loss: 1.0776 - acc: 0.6683 - val_loss: nan - val_acc: 0.6738\n",
       "Epoch 6/10\n",
-      "21s - loss: 1.0177 - acc: 0.6779 - val_loss: nan - val_acc: 0.6805\n",
+      "21s - loss: 1.0221 - acc: 0.6770 - val_loss: nan - val_acc: 0.6812\n",
       "Epoch 7/10\n",
-      "20s - loss: 0.9730 - acc: 0.6851 - val_loss: nan - val_acc: 0.6898\n",
+      "21s - loss: 0.9801 - acc: 0.6832 - val_loss: nan - val_acc: 0.6888\n",
       "Epoch 8/10\n",
-      "20s - loss: 0.9347 - acc: 0.6925 - val_loss: nan - val_acc: 0.6963\n",
+      "21s - loss: 0.9393 - acc: 0.6917 - val_loss: nan - val_acc: 0.6954\n",
       "Epoch 9/10\n",
-      "20s - loss: 0.8987 - acc: 0.7010 - val_loss: nan - val_acc: 0.7042\n",
+      "21s - loss: 0.9029 - acc: 0.7005 - val_loss: nan - val_acc: 0.7119\n",
       "Epoch 10/10\n",
-      "21s - loss: 0.8652 - acc: 0.7105 - val_loss: nan - val_acc: 0.7152\n",
-      "new jersey est parfois calme en mois de il est il est en <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
+      "20s - loss: 0.8601 - acc: 0.7164 - val_loss: nan - val_acc: 0.7191\n",
+      "new jersey est parfois calme en mois de il et il est en en <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
      ]
     }
    ],
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -530,26 +530,26 @@
      "text": [
       "Train on 110288 samples, validate on 27573 samples\n",
       "Epoch 1/10\n",
-      "23s - loss: 2.9947 - acc: 0.4529 - val_loss: nan - val_acc: 0.5172\n",
+      "23s - loss: 2.9831 - acc: 0.4519 - val_loss: nan - val_acc: 0.5239\n",
       "Epoch 2/10\n",
-      "22s - loss: 1.6378 - acc: 0.6135 - val_loss: nan - val_acc: 0.7082\n",
+      "22s - loss: 1.6243 - acc: 0.6161 - val_loss: nan - val_acc: 0.6985\n",
       "Epoch 3/10\n",
-      "22s - loss: 0.9894 - acc: 0.7586 - val_loss: nan - val_acc: 0.8048\n",
+      "23s - loss: 1.0158 - acc: 0.7507 - val_loss: nan - val_acc: 0.7948\n",
       "Epoch 4/10\n",
-      "22s - loss: 0.6322 - acc: 0.8251 - val_loss: nan - val_acc: 0.8474\n",
+      "23s - loss: 0.6573 - acc: 0.8210 - val_loss: nan - val_acc: 0.8439\n",
       "Epoch 5/10\n",
-      "22s - loss: 0.4644 - acc: 0.8615 - val_loss: nan - val_acc: 0.8768\n",
+      "22s - loss: 0.4783 - acc: 0.8597 - val_loss: nan - val_acc: 0.8732\n",
       "Epoch 6/10\n",
-      "22s - loss: 0.3762 - acc: 0.8835 - val_loss: nan - val_acc: 0.8928\n",
+      "22s - loss: 0.3776 - acc: 0.8843 - val_loss: nan - val_acc: 0.8927\n",
       "Epoch 7/10\n",
-      "22s - loss: 0.3215 - acc: 0.8979 - val_loss: nan - val_acc: 0.9032\n",
+      "23s - loss: 0.3239 - acc: 0.8975 - val_loss: nan - val_acc: 0.9043\n",
       "Epoch 8/10\n",
-      "22s - loss: 0.2899 - acc: 0.9063 - val_loss: nan - val_acc: 0.9120\n",
+      "23s - loss: 0.2858 - acc: 0.9079 - val_loss: nan - val_acc: 0.9106\n",
       "Epoch 9/10\n",
-      "22s - loss: 0.2641 - acc: 0.9139 - val_loss: nan - val_acc: 0.9159\n",
+      "23s - loss: 0.2652 - acc: 0.9129 - val_loss: nan - val_acc: 0.9171\n",
       "Epoch 10/10\n",
-      "23s - loss: 0.2452 - acc: 0.9193 - val_loss: nan - val_acc: 0.9182\n",
-      "new jersey est parfois calme en cours de l' automne neigeux il est avril <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
+      "22s - loss: 0.2451 - acc: 0.9188 - val_loss: nan - val_acc: 0.9192\n",
+      "new jersey est parfois calme en l' automne il est neigeux en avril <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
      ]
     }
    ],
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -626,26 +626,26 @@
      "text": [
       "Train on 110288 samples, validate on 27573 samples\n",
       "Epoch 1/10\n",
-      "40s - loss: 1.8563 - acc: 0.5731 - val_loss: nan - val_acc: 0.6286\n",
+      "40s - loss: 1.8589 - acc: 0.5729 - val_loss: nan - val_acc: 0.6260\n",
       "Epoch 2/10\n",
-      "39s - loss: 1.2385 - acc: 0.6442 - val_loss: nan - val_acc: 0.6586\n",
+      "40s - loss: 1.2387 - acc: 0.6441 - val_loss: nan - val_acc: 0.6551\n",
       "Epoch 3/10\n",
-      "39s - loss: 1.0955 - acc: 0.6724 - val_loss: nan - val_acc: 0.6842\n",
+      "40s - loss: 1.0986 - acc: 0.6716 - val_loss: nan - val_acc: 0.6831\n",
       "Epoch 4/10\n",
-      "39s - loss: 0.9969 - acc: 0.6904 - val_loss: nan - val_acc: 0.6977\n",
+      "39s - loss: 1.0023 - acc: 0.6877 - val_loss: nan - val_acc: 0.6977\n",
       "Epoch 5/10\n",
-      "39s - loss: 0.9258 - acc: 0.7032 - val_loss: nan - val_acc: 0.7088\n",
+      "39s - loss: 0.9311 - acc: 0.7021 - val_loss: nan - val_acc: 0.6986\n",
       "Epoch 6/10\n",
-      "39s - loss: 0.8729 - acc: 0.7126 - val_loss: nan - val_acc: 0.7218\n",
+      "39s - loss: 0.8803 - acc: 0.7105 - val_loss: nan - val_acc: 0.7189\n",
       "Epoch 7/10\n",
-      "40s - loss: 0.8267 - acc: 0.7226 - val_loss: nan - val_acc: 0.7295\n",
+      "40s - loss: 0.8341 - acc: 0.7198 - val_loss: nan - val_acc: 0.7262\n",
       "Epoch 8/10\n",
-      "40s - loss: 0.7869 - acc: 0.7325 - val_loss: nan - val_acc: 0.7441\n",
+      "40s - loss: 0.7941 - acc: 0.7277 - val_loss: nan - val_acc: 0.7358\n",
       "Epoch 9/10\n",
-      "40s - loss: 0.7520 - acc: 0.7437 - val_loss: nan - val_acc: 0.7520\n",
+      "40s - loss: 0.7572 - acc: 0.7382 - val_loss: nan - val_acc: 0.7451\n",
       "Epoch 10/10\n",
-      "40s - loss: 0.7040 - acc: 0.7628 - val_loss: nan - val_acc: 0.7735\n",
-      "new jersey est parfois calme au l' et il et il est en <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
+      "40s - loss: 0.7236 - acc: 0.7492 - val_loss: nan - val_acc: 0.7485\n",
+      "new jersey est parfois calme en mois de il et il est en en <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
      ]
     }
    ],
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -720,25 +720,25 @@
      "text": [
       "Train on 110288 samples, validate on 27573 samples\n",
       "Epoch 1/10\n",
-      "43s - loss: 2.7762 - acc: 0.4597 - val_loss: nan - val_acc: 0.5185\n",
+      "42s - loss: 2.7127 - acc: 0.4660 - val_loss: nan - val_acc: 0.5320\n",
       "Epoch 2/10\n",
-      "42s - loss: 1.8532 - acc: 0.5462 - val_loss: nan - val_acc: 0.5695\n",
+      "42s - loss: 1.8393 - acc: 0.5490 - val_loss: nan - val_acc: 0.5678\n",
       "Epoch 3/10\n",
-      "43s - loss: 1.5737 - acc: 0.5820 - val_loss: nan - val_acc: 0.5934\n",
+      "42s - loss: 1.5336 - acc: 0.5871 - val_loss: nan - val_acc: 0.5894\n",
       "Epoch 4/10\n",
-      "43s - loss: 1.4737 - acc: 0.5975 - val_loss: nan - val_acc: 0.6144\n",
+      "43s - loss: 1.3922 - acc: 0.6128 - val_loss: nan - val_acc: 0.6296\n",
       "Epoch 5/10\n",
-      "43s - loss: 1.3528 - acc: 0.6207 - val_loss: nan - val_acc: 0.6170\n",
+      "43s - loss: 1.2996 - acc: 0.6312 - val_loss: nan - val_acc: 0.6367\n",
       "Epoch 6/10\n",
-      "43s - loss: 1.2920 - acc: 0.6325 - val_loss: nan - val_acc: 0.6299\n",
+      "43s - loss: 1.2842 - acc: 0.6318 - val_loss: nan - val_acc: 0.6409\n",
       "Epoch 7/10\n",
-      "43s - loss: 1.2286 - acc: 0.6410 - val_loss: nan - val_acc: 0.6452\n",
+      "43s - loss: 1.1949 - acc: 0.6481 - val_loss: nan - val_acc: 0.6519\n",
       "Epoch 8/10\n",
-      "43s - loss: 1.1829 - acc: 0.6471 - val_loss: nan - val_acc: 0.6523\n",
+      "42s - loss: 1.1585 - acc: 0.6542 - val_loss: nan - val_acc: 0.6528\n",
       "Epoch 9/10\n",
-      "43s - loss: 1.1408 - acc: 0.6552 - val_loss: nan - val_acc: 0.6619\n",
+      "43s - loss: 1.1586 - acc: 0.6544 - val_loss: nan - val_acc: 0.6498\n",
       "Epoch 10/10\n",
-      "43s - loss: 1.2114 - acc: 0.6437 - val_loss: nan - val_acc: 0.6525\n",
+      "42s - loss: 1.1007 - acc: 0.6655 - val_loss: nan - val_acc: 0.6796\n",
       "new jersey est parfois chaud en l' et il est est en en <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
      ]
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -829,7 +829,7 @@
     "    # TODO: Implement\n",
     "    learning_rate=0.001\n",
     "    model = Sequential()\n",
-    "    model.add(Embedding(english_vocab_size,256,input_length=input_shape[1]))\n",
+    "    model.add(Embedding(english_vocab_size,512,input_length=input_shape[1], mask_zero=False))\n",
     "    model.add(Bidirectional(GRU(512,return_sequences=False)))\n",
     "    model.add(RepeatVector(output_sequence_length))\n",
     "    model.add(Bidirectional(GRU(512,return_sequences=True)))\n",
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -870,30 +870,30 @@
      "text": [
       "Train on 110288 samples, validate on 27573 samples\n",
       "Epoch 1/10\n",
-      "92s - loss: 2.3341 - acc: 0.4938 - val_loss: nan - val_acc: 0.5882\n",
+      "95s - loss: 2.3275 - acc: 0.4990 - val_loss: nan - val_acc: 0.6044\n",
       "Epoch 2/10\n",
-      "91s - loss: 1.3707 - acc: 0.6371 - val_loss: nan - val_acc: 0.6726\n",
+      "94s - loss: 1.3621 - acc: 0.6408 - val_loss: nan - val_acc: 0.6849\n",
       "Epoch 3/10\n",
-      "91s - loss: 1.0388 - acc: 0.7106 - val_loss: nan - val_acc: 0.7344\n",
+      "94s - loss: 1.0116 - acc: 0.7172 - val_loss: nan - val_acc: 0.7498\n",
       "Epoch 4/10\n",
-      "91s - loss: 0.8197 - acc: 0.7592 - val_loss: nan - val_acc: 0.7764\n",
+      "94s - loss: 0.7837 - acc: 0.7705 - val_loss: nan - val_acc: 0.7946\n",
       "Epoch 5/10\n",
-      "91s - loss: 0.6613 - acc: 0.8026 - val_loss: nan - val_acc: 0.8198\n",
+      "95s - loss: 0.6164 - acc: 0.8164 - val_loss: nan - val_acc: 0.8426\n",
       "Epoch 6/10\n",
-      "91s - loss: 0.5362 - acc: 0.8389 - val_loss: nan - val_acc: 0.8549\n",
+      "94s - loss: 0.4714 - acc: 0.8625 - val_loss: nan - val_acc: 0.8831\n",
       "Epoch 7/10\n",
-      "91s - loss: 0.4326 - acc: 0.8707 - val_loss: nan - val_acc: 0.8822\n",
+      "94s - loss: 0.3463 - acc: 0.9004 - val_loss: nan - val_acc: 0.9124\n",
       "Epoch 8/10\n",
-      "91s - loss: 0.3400 - acc: 0.8983 - val_loss: nan - val_acc: 0.9058\n",
+      "94s - loss: 0.2526 - acc: 0.9281 - val_loss: nan - val_acc: 0.9370\n",
       "Epoch 9/10\n",
-      "91s - loss: 0.2646 - acc: 0.9221 - val_loss: nan - val_acc: 0.9287\n",
+      "94s - loss: 0.2007 - acc: 0.9418 - val_loss: nan - val_acc: 0.9485\n",
       "Epoch 10/10\n",
-      "91s - loss: 0.2143 - acc: 0.9362 - val_loss: nan - val_acc: 0.9426\n",
+      "94s - loss: 0.1539 - acc: 0.9559 - val_loss: nan - val_acc: 0.9534\n",
       "Sample 1:\n",
       "il a vu un vieux camion jaune <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n",
       "Il a vu un vieux camion jaune\n",
       "Sample 2:\n",
-      "new jersey est parfois calme au cours et il est neigeux en avril <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n",
+      "new jersey est parfois calme pendant l' automne et il est neigeux en avril <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n",
       "<PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
      ]
     }
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
